--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 main {
   min-height: 150vh;
-  min-width: none;
+  width: 100%;
 }
 
 
@@ -16,6 +16,10 @@ h1 {
 h2 {
   font-size: 1.4rem;
   padding: 0.5rem 0;
+}
+
+.home_font {
+ font-weight: 1rem;
 }
 
 .rating span {
@@ -59,7 +63,6 @@ h2 {
 
 .top-marketing_2 { 
   margin-bottom: 2rem;
-  background: color red;
 }
 
 
